chore: spring-security 설정 추가 및 gitignore

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,10 @@ spring:
     multipart:
       max-file-size: 10MB
 
-# Thymeleaf 설정
+  profiles:
+    include: oauth
+
+  # Thymeleaf 설정
   thymeleaf:
     cache: false
     prefix: classpath:templates/views/
@@ -23,9 +26,9 @@ spring:
 # datasource 설정.  MySql등 spring-jdbc 사용시 아래 정보 없으면 서버가동 에러.
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/mydb2304?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
-    username: myuser2304
-    password: 1234
+    url: jdbc:mysql://localhost:3306/LIA
+    username: root
+    password: 1111
 
   jpa:
     show-sql: true
@@ -37,7 +40,7 @@ spring:
     # update: DB테이블와 엔티티 매핑정보를 비교해서 변경사항이 있는 경우만 수정 (ALTER). 테이블 없으면 CREATE
     # create-drop: 기본적으로 create와 동일한 동작을 하나, 종료시점에서 drop
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
 
   mail:
     host: smtp.gmail.com
